# hydra

./: .env.example  .gitignore  LICENSE  README.md  create_init_files.py  pyproject.toml  readme.txt  requirements.txt
config/: database.py
scripts/: analyze_old_data.py  archive_old_data.py  fix_nan_imports.py  fresh_data_start.py  prepare_ml_data.py  run_ml_pipeline.py  test_data_collection.py  test_imports.py  train_first_model.py  verify_fresh_data.py
src/core/: data_manager.py  system_config.py
src/ml/: __init__.py  data_preprocessor.py
src/ml/inference/: predictor.py
src/ml/training/: trainer.py
src/utils/: logger.py
tests/integration/: test_integration.py
tests/unit/: test_database.py
