[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydra"
version = "0.1.0"
description = "Advanced Quantitative Trading System with Machine Learning"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pymongo>=4.5.0",
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.5",
    "GPUtil>=1.4.0",
    "tabulate>=0.9.0",
    "colorama>=0.4.6",
    "aiohttp>=3.8.5",
    "websockets>=11.0.3",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "tqdm>=4.66.1",
    "watchdog>=3.0.0"
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.6",
    "lightgbm>=4.1.0",
    "joblib>=1.3.2",
    "pandas-ta>=0.3.14"
]
api = [
    "yfinance>=0.2.33",
    "fredapi>=0.5.0",
    "tweepy>=4.14.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3"
]
full = [
    "hydra[ml]",
    "hydra[api]",
    "tensorflow>=2.13.0",
    "pyarrow>=13.0.0",
    "polars>=0.19.12",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "plotly>=5.15.0"
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]